# debugium

./: .env.example  .gitignore  .mcp.json  .npmignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  FUTURE_FEATURES.md  README.md  SKILL.md  dap.json.example  dap.json.remote-example  install.sh  marketplace.json  package.json  run_test.sh  rust-toolchain.toml  server.json  target.js  test_target.py
.claude-plugin/: marketplace.json  plugin.json
.cursor/: mcp.json
.github/workflows/: ci.yml  pages.yml  release.yml
crates/dap-types/: Cargo.toml
crates/dap-types/src/: lib.rs
crates/debugium-server/: Cargo.toml
crates/debugium-server/src/: ctl.rs  home.rs  main.rs
crates/debugium-server/src/dap/: adapter.rs  client.rs  mod.rs  session.rs
crates/debugium-server/src/mcp/: mod.rs  tools.rs
crates/debugium-server/src/server/: hub.rs  mod.rs  routes.rs
crates/debugium-server/tests/: integration.rs
crates/debugium-ui/: Cargo.toml  index.html
crates/debugium-ui/src/: editor.rs  lib.rs
dap_cli/: cli.py  client.py  repl.py  session.py  web_server.py
dap_cli/static/: app.js  index.html  style.css
docs/: DAP_COVERAGE_AUDIT.md  index.html  ui-protocol-coverage-audit.md
examples/: README.md  c-cpp.dap.json  java.dap.json  node.dap.json  python.dap.json  remote-java.dap.json  remote-python.dap.json  rust.dap.json  scala-jvm.dap.json  typescript.dap.json  wasm.dap.json
npm/: install.js  run.js
scripts/: sync-ui.sh
skills/debugium/: SKILL.md
tests/: TargetJava.java  TargetScala.scala  target_c.c  target_cpp.cpp  target_node.js  target_python.py  target_rust.rs  target_subprocess.py  target_subprocess_child.py  target_threads.py  target_ts.ts  target_wasm.c  test_cli.py  test_cli_js.py  trace_api.py  trace_js.py  trace_threads.py
tests/buggy/: cache.py  demo.py  leak.ts  main.py  memo.js  memo.ts  scheduler.py  transform.py
tests/buggy/rust/: Cargo.toml
tests/buggy/rust/src/: main.rs
tests/target_rust/: Cargo.toml
tests/target_rust/src/: main.rs
tools/java-dap-adapter/: JavaDapAdapter.java  run.sh
