[package]
name = "debugium-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "debugium"
path = "src/main.rs"

[dependencies]
dap-types = { path = "../dap-types" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio-util = { workspace = true }
dashmap = { workspace = true }
clap = { workspace = true }
tracing-subscriber = { workspace = true }
open = "5"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
glob = "0.3"
reqwest = { version = "0.12", features = ["json"] }
regex = "1"

[dev-dependencies]
dirs = "5"

[[test]]
name = "integration"
path = "tests/integration.rs"
